bitkeeper revision 1.1092 (40f58b91EPi_jnua2Uu_mG3PqibC8w)
more parts of:
  - Include Linux 2.6 in top-level Makefile
  - Enable module support in 2.6

--- a/linux-2.6.7-xen-sparse/arch/xen/Makefile
+++ b/linux-2.6.7-xen-sparse/arch/xen/Makefile
@@ -52,12 +52,20 @@ all: vmlinuz
 vmlinuz: vmlinux
 	$(Q)$(MAKE) $(build)=arch/xen/boot vmlinuz
 
+INSTALL_NAME ?= $(KERNELRELEASE)
+install: vmlinuz
+	mkdir -p $(INSTALL_PATH)/boot
+	install -m0644 vmlinuz $(INSTALL_PATH)/boot/vmlinuz-$(INSTALL_NAME)$(INSTALL_SUFFIX)
+	install -m0644 vmlinux $(INSTALL_PATH)/boot/vmlinux-$(INSTALL_NAME)$(INSTALL_SUFFIX)
+	install -m0664 .config $(INSTALL_PATH)/boot/config-$(INSTALL_NAME)$(INSTALL_SUFFIX)
+
 archclean:
 	@if [ -e arch/xen/arch ]; then $(MAKE) $(clean)=arch/xen/arch; fi;
 	@rm -f arch/xen/arch include/.asm-ignore include/asm-xen/asm
 
 define archhelp
   echo  '* vmlinuz	- Compressed kernel image'
+  echo  '  install	- Install kernel image and config file'
 endef
 
 ifneq ($(XENARCH),)
