bitkeeper revision 1.1108.2.16 (40ffbcb9BiiQEdm3tM2wR3kHhi0avQ)
Changed location of sv - http share sits at /var/xen/sv
 while python files have been move out of xend

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -16,6 +16,7 @@ install: all
 	$(MAKE) -C xentrace install
 	$(MAKE) -C python install
 	$(MAKE) -C xfrd install
+	$(MAKE) -C sv install
 
 dist: $(TARGET)
 	$(MAKE) prefix=`pwd`/../../install dist=yes install
