bitkeeper revision 1.1108.13.1 (41013a844lXqlHgR5n6-9AZ5s3WCsQ)
Added general support for actions
Slightly generalized and refactored code for modules / tabs

--- a/tools/sv/Makefile
+++ b/tools/sv/Makefile
@@ -28,12 +28,16 @@ install:
 	install -m0644 images/seperator.jpg $(sv_insdir)/images
 	install -m0644 images/seperator-left-highlight.jpg $(sv_insdir)/images
 	install -m0644 images/seperator-right-highlight.jpg $(sv_insdir)/images
+	
+	install -m0644 images/shutdown.png $(sv_insdir)/images
+	install -m0644 images/reboot.png $(sv_insdir)/images
 
 	# make include folder
 	mkdir -p $(sv_insdir)/inc
 	
 	# copy stylesheet
 	install -m0644 inc/style.css $(sv_insdir)/inc
+	install -m0644 inc/script.js $(sv_insdir)/inc
 
 clean:
 
