bitkeeper revision 1.1108.14.3 (4104dd53Bal-_Sr9_aHk1vh4GGK3bg)
Fix xfrd compile flags.

--- a/tools/xfrd/Makefile
+++ b/tools/xfrd/Makefile
@@ -69,7 +69,7 @@ XFRD_LIBS += $(CURL_LIBS)
 all: xfrd
 
 xfrd: $(XFRD_PROG_OBJ)
-	$(CC) -shared -o $@ $^ $(XFRD_LIBS)
+	$(CC) -o $@ $^ $(XFRD_LIBS)
 
 .PHONY: install
 install: xfrd
