bitkeeper revision 1.1108.1.21 (4104ffcb0fLoE7HIdNvUGJI49n_Sxg)
Added menu writing, improving the menu on the left of the page,
and gerneralized getDomInfoHash, should work with upgraded versions
 of xend

--- a/tools/sv/Makefile
+++ b/tools/sv/Makefile
@@ -31,6 +31,8 @@ install:
 	
 	install -m0644 images/shutdown.png $(sv_insdir)/images
 	install -m0644 images/reboot.png $(sv_insdir)/images
+	install -m0644 images/pause.png $(sv_insdir)/images
+	install -m0644 images/unpause.png $(sv_insdir)/images
 
 	# make include folder
 	mkdir -p $(sv_insdir)/inc
