--- a/tools/sv/Makefile
+++ b/tools/sv/Makefile
@@ -33,6 +33,9 @@ install:
 	install -m0644 images/reboot.png $(sv_insdir)/images
 	install -m0644 images/pause.png $(sv_insdir)/images
 	install -m0644 images/unpause.png $(sv_insdir)/images
+        
+	install -m0644 images/next.png $(sv_insdir)/images
+	install -m0644 images/previous.png $(sv_insdir)/images        
 
 	# make include folder
 	mkdir -p $(sv_insdir)/inc
