--- a/linux-2.6.7-xen-sparse/arch/xen/boot/Makefile
+++ b/linux-2.6.7-xen-sparse/arch/xen/boot/Makefile
@@ -1,3 +1,8 @@
 
-vmlinuz: vmlinux FORCE
+OBJCOPYFLAGS := -g --strip-unneeded
+
+vmlinuz: vmlinux-stripped FORCE
 	$(call if_changed,gzip)
+
+vmlinux-stripped: vmlinux FORCE
+	$(call if_changed,objcopy)
