bitkeeper revision 1.1108.29.1 (4107987b3YS7DchKHz1bWQKqXsXTsg)
Added xensv command: xensv start / stop - 
	checks for twisted and for xend
More work on wizzard, now persits values and can move back / forth

--- a/tools/misc/Makefile
+++ b/tools/misc/Makefile
@@ -21,7 +21,7 @@ OBJS     = $(patsubst %.c,%.o,$(SRCS))
 TARGETS  = xen_cpuperf
 
 INSTALL_BIN  = $(TARGETS) xencons
-INSTALL_SBIN = netfix xm xend
+INSTALL_SBIN = netfix xm xend xensv
 
 all: $(TARGETS)
 	$(MAKE) -C miniterm
