bitkeeper revision 1.1108.1.31 (4107adf2vp4n6dnsoTUjick0ruJYIQ)
get Linux 2.6 in dom0 working:
- tested with e100 driver and nfsroot

--- a/linux-2.6.7-xen-sparse/arch/xen/i386/Makefile
+++ b/linux-2.6.7-xen-sparse/arch/xen/i386/Makefile
@@ -72,13 +72,13 @@ core-y					+= arch/xen/i386/kernel/ \
 # \
 #					   arch/xen/$(mcore-y)/
 drivers-$(CONFIG_MATH_EMULATION)	+= arch/i386/math-emu/
-drivers-$(CONFIG_PCI)			+= arch/i386/pci/
+drivers-$(CONFIG_PCI)			+= arch/xen/i386/pci/
 # must be linked after kernel/
 drivers-$(CONFIG_OPROFILE)		+= arch/i386/oprofile/
 drivers-$(CONFIG_PM)			+= arch/i386/power/
 
 # for clean
-obj-	+= kernel/
+obj-	+= kernel/ mm/ pci/
 #obj-	+= ../../i386/lib/ ../../i386/mm/ 
 #../../i386/$(mcore-y)/
 #obj-	+= ../../i386/pci/ ../../i386/oprofile/ ../../i386/power/
