bitkeeper revision 1.1108.1.35 (4107c7da9kAXLjKhklba_j2Kjf05bg)
don't use common slab/page allocators for ia64 (it uses 2.6 stuff in arch directory)

--- a/xen/common/Makefile
+++ b/xen/common/Makefile
@@ -1,6 +1,11 @@
 
 include $(BASEDIR)/Rules.mk
 
+ifeq ($(TARGET_ARCH),ia64) 
+OBJS := $(subst page_alloc.o,,$(OBJS))
+OBJS := $(subst slab.o,,$(OBJS))
+endif
+
 ifneq ($(debugger),y)
 OBJS := $(subst debug.o,,$(OBJS))
 OBJS := $(subst debug-linux.o,,$(OBJS))
