bitkeeper revision 1.1108.30.3 (4107c922o_Bx20-5N8PsVBcjjHYmQA)
More work on wizard

--- a/tools/sv/Makefile
+++ b/tools/sv/Makefile
@@ -36,7 +36,8 @@ install:
         
 	install -m0644 images/next.png $(sv_insdir)/images
 	install -m0644 images/previous.png $(sv_insdir)/images        
-
+	install -m0644 images/finish.png $(sv_insdir)/images 
+        
 	# make include folder
 	mkdir -p $(sv_insdir)/inc
 	
