bitkeeper revision 1.1108.38.1 (4108f5c3GAt0sOF9Rw25ssmCIA9QCg)
support creating domains from Linux 2.6

--- a/linux-2.6.7-xen-sparse/arch/xen/kernel/Makefile
+++ b/linux-2.6.7-xen-sparse/arch/xen/kernel/Makefile
@@ -9,4 +9,4 @@ $(obj)/vmlinux.lds.s: arch/$(ARCH)/$(XENARCH)/kernel/vmlinux.lds.s
 
 extra-y += vmlinux.lds.s
 
-obj-y	:= ctrl_if.o process.o reboot.o empty.o
+obj-y	:= ctrl_if.o process.o reboot.o xen_proc.o empty.o
