bitkeeper revision 1.1108.44.1 (410a9819I8nRg4cqB44agt4G5KysGA)
add network backend driver for 2.6

--- a/linux-2.6.7-xen-sparse/drivers/xen/Makefile
+++ b/linux-2.6.7-xen-sparse/drivers/xen/Makefile
@@ -3,5 +3,7 @@
 obj-y	+= block/
 obj-y	+= console/
 obj-y	+= evtchn/
-obj-y	+= net/
+obj-y	+= netfront/
 obj-y	+= privcmd/
+
+obj-$(CONFIG_XEN_PHYSDEV_ACCESS)	+= netback/
