bitkeeper revision 1.1108.47.1 (410d0894HhCNQH1pLGY2q0pUmuKCfQ)
add block backend driver for Linux 2.6

--- a/linux-2.6.7-xen-sparse/arch/xen/Kconfig
+++ b/linux-2.6.7-xen-sparse/arch/xen/Kconfig
@@ -38,6 +38,11 @@ config XEN_PHYSDEV_ACCESS
 
 endmenu
 
+# Xen's block device backend driver needs 2^12 pages
+config FORCE_MAX_ZONEORDER
+        int
+        default "12" if XEN_PHYSDEV_ACCESS
+        default "11" if !XEN_PHYSDEV_ACCESS
 
 #config VT
 #	bool
