--- a/linux-2.4.26-xen-sparse/arch/xen/kernel/Makefile
+++ b/linux-2.4.26-xen-sparse/arch/xen/kernel/Makefile
@@ -6,7 +6,7 @@ all: kernel.o head.o init_task.o
 
 O_TARGET := kernel.o
 
-export-objs     := i386_ksyms.o 
+export-objs     := i386_ksyms.o evtchn.o
 
 obj-y	:= process.o semaphore.o signal.o entry.o traps.o irq.o  \
 		ptrace.o ioport.o ldt.o setup.o time.o sys_i386.o \
