bitkeeper revision 1.1159.9.1 (41178e31cBWhZ0DxCG135dh8XerZfg)
(Always) use our version of ioport.c.

--- a/linux-2.6.7-xen-sparse/arch/xen/i386/kernel/Makefile
+++ b/linux-2.6.7-xen-sparse/arch/xen/i386/kernel/Makefile
@@ -9,10 +9,10 @@ CFLAGS	+= -Iarch/$(XENARCH)/kernel
 extra-y := head.o init_task.o vmlinux.lds.s
 
 obj-y	:= traps.o irq.o ldt.o setup.o entry.o time.o pci-dma.o process.o \
-		signal.o i386_ksyms.o
+		ioport.o signal.o i386_ksyms.o
 
 c-obj-y	:= semaphore.o vm86.o \
-		ptrace.o ioport.o sys_i386.o \
+		ptrace.o sys_i386.o \
 		i387.o dmi_scan.o bootflag.o \
 		doublefault.o
 s-obj-y	:=
