bitkeeper revision 1.1159.12.1 (4117f0d1EjfQrr7cjM82SS7qdzq81A)
Build xend manual plus latex fixes

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -5,7 +5,7 @@
 # DOCUMENTS should be a list of the target Postscript files.
 
 DOCUMENTS = interface.ps interface.pdf interface.html user.ps \
-	    user.pdf user.html
+	    user.pdf user.html xend.ps xend.pdf xend.html
 
 GFX  = $(patsubst %.obj, %.eps, $(wildcard figs/*.obj))
 GFX += $(patsubst %.fig, %.eps, $(wildcard figs/*.fig))
