bitkeeper revision 1.1159.17.18 (411b7a4clSlwGNpVa4jPTa9wgDjfmw)
Add compile-time option to use writable pagetables.

--- a/linux-2.6.7-xen-sparse/arch/xen/Kconfig
+++ b/linux-2.6.7-xen-sparse/arch/xen/Kconfig
@@ -36,6 +36,12 @@ config XEN_PHYSDEV_ACCESS
 	help
 	  Device-driver domain (physical device access)
 
+config XEN_WRITABLE_PAGETABLES
+	bool "Use writable pagetables"
+	default n
+	help
+	  Use writable L1 pagetables
+
 endmenu
 
 # Xen's block device backend driver needs 2^12 pages
