bitkeeper revision 1.1159.17.26 (411ce99dzAxJPoMN9ygmUMItgtICCA)
Merged binary-rewrite fixup back into 2.4. Emulation and rewriting
still both seem to have issues with Fedora Core 3 Test 1, however.
Works fine with 2.6, but not with 2.4. Probably due to different
code paths being exercised in glibc?

--- a/linux-2.4.26-xen-sparse/arch/xen/kernel/Makefile
+++ b/linux-2.4.26-xen-sparse/arch/xen/kernel/Makefile
@@ -11,7 +11,7 @@ export-objs     := i386_ksyms.o
 obj-y	:= process.o semaphore.o signal.o entry.o traps.o irq.o  \
 		ptrace.o ioport.o ldt.o setup.o time.o sys_i386.o \
 		i386_ksyms.o i387.o evtchn.o ctrl_if.o pci-dma.o \
-		reboot.o
+		reboot.o fixup.o
 
 ifdef CONFIG_PCI
 obj-y	+= pci-i386.o pci-pc.o
