bitkeeper revision 1.1159.32.1 (4120b0e7LRYrL1B3ICa0Qkit5txAbQ)
Added error checking, small button on domain list, 
updated to be compatible with latest xend, and
some small changes to domain creation.

--- a/tools/sv/Makefile
+++ b/tools/sv/Makefile
@@ -33,7 +33,12 @@ install:
 	install -m0644 images/reboot.png $(sv_insdir)/images
 	install -m0644 images/pause.png $(sv_insdir)/images
 	install -m0644 images/unpause.png $(sv_insdir)/images
+	install -m0644 images/destroy.png $(sv_insdir)/images
         
+	install -m0644 images/small-destroy.png $(sv_insdir)/images        
+	install -m0644 images/small-pause.png $(sv_insdir)/images   
+	install -m0644 images/small-unpause.png $(sv_insdir)/images
+                        
 	install -m0644 images/next.png $(sv_insdir)/images
 	install -m0644 images/previous.png $(sv_insdir)/images        
 	install -m0644 images/finish.png $(sv_insdir)/images 
