bitkeeper revision 1.1159.36.1 (41224664I9csn5Rc83-pM_anatKyCg)
Fix VESA BIOS mapping issue. Clean up workqueue/taskqueue confusion.

--- a/linux-2.4.26-xen-sparse/arch/xen/mm/Makefile
+++ b/linux-2.4.26-xen-sparse/arch/xen/mm/Makefile
@@ -9,7 +9,7 @@
 
 O_TARGET := mm.o
 
-obj-y	 := init.o fault.o extable.o pageattr.o hypervisor.o ioremap.o mmap.o
+obj-y	 := init.o fault.o extable.o pageattr.o hypervisor.o ioremap.o
 
 export-objs := pageattr.o
 
