bitkeeper revision 1.1159.1.86 (412495d3pSRY5XpdRb-xCxOKOJxElg)
Rename xmdefaults to xmdefconfig.
Rename other xm config examples.
Change default script dir to /etc/xen/scripts.

--- a/tools/examples/Makefile
+++ b/tools/examples/Makefile
@@ -1,32 +1,37 @@
 
-INSTALL  = $(wildcard *.py)
+# Init scripts.
+XEND_INITD = init.d/xend
 
-INITD    = init.d/xend
+# Xen configuration dir and configs to go there.
+XEN_CONFIG_DIR = /etc/xen
+XEN_CONFIGS = xend-config.sxp
+XEN_CONFIGS += xmdefconfig 
+XEN_CONFIGS += xmdefconfig-example
+XEN_CONFIGS += xmdefconfig-netbsd
 
-XEN_CONFIG_DIR  = /etc/xen
-XEN_CONFIGS = xmdefaults xmnetbsd xend-config.sxp
-
-XEN_SCRIPT_DIR = /etc/xen
-XEN_SCRIPTS = vifctl network vif-bridge
+# Xen script dir and scripts to go there.
+XEN_SCRIPT_DIR = /etc/xen/scripts
+XEN_SCRIPTS = network
+XEN_SCRIPTS += vif-bridge
 
 all: 
 
 install: all install-initd install-configs install-scripts
 
 install-initd:
-	mkdir -p $(prefix)/etc/init.d
-	install -m0755 $(INITD) $(prefix)/etc/init.d
+	install -d $(prefix)/etc/init.d
+	install -m0755 $(XEND_INITD) $(prefix)/etc/init.d
 
 install-configs:
-	mkdir -p $(prefix)$(XEN_CONFIG_DIR)
-	mkdir -p $(prefix)$(XEN_CONFIG_DIR)/auto
+	install -d $(prefix)$(XEN_CONFIG_DIR)
+	install -d $(prefix)$(XEN_CONFIG_DIR)/auto
 	for i in $(XEN_CONFIGS); \
 	    do [ -a $(prefix)/$(XEN_CONFIG_DIR)/$$i ] || \
 	    install -m0644 $$i $(prefix)$(XEN_CONFIG_DIR); \
 	done
 
 install-scripts:
-	mkdir -p $(prefix)$(XEN_SCRIPT_DIR)
+	install -d $(prefix)$(XEN_SCRIPT_DIR)
 	for i in $(XEN_SCRIPTS); \
 	    do [ -a $(prefix)/$()/$$i ] || \
 	    install -m0755 $$i $(prefix)$(XEN_SCRIPT_DIR); \
