bitkeeper revision 1.1159.42.8 (4124f66fUINxrel-POThC1of633DIA)
Clean up network-backend driver changes to common files.
There is now a 'foreign page' hook into the page allocator, and
a CONFIG_ option for forcing page-sized rx skbs.

--- a/linux-2.4.26-xen-sparse/arch/xen/config.in
+++ b/linux-2.4.26-xen-sparse/arch/xen/config.in
@@ -20,7 +20,10 @@ endmenu
 # The IBM S/390 patch needs this.
 define_bool CONFIG_NO_IDLE_HZ y
 
-if [ "$CONFIG_XEN_PHYSDEV_ACCESS" != "y" ]; then
+if [ "$CONFIG_XEN_PHYSDEV_ACCESS" == "y" ]; then
+   define_bool CONFIG_FOREIGN_PAGES y
+else
+   define_bool CONFIG_FOREIGN_PAGES n
    define_bool CONFIG_NETDEVICES y
    define_bool CONFIG_VT n
 fi
