--- a/linux-2.6.7-xen-sparse/arch/xen/configs/xen0_defconfig
+++ b/linux-2.6.7-xen-sparse/arch/xen/configs/xen0_defconfig
@@ -10,6 +10,8 @@ CONFIG_NO_IDLE_HZ=y
 #
 CONFIG_XEN_PRIVILEGED_GUEST=y
 CONFIG_XEN_PHYSDEV_ACCESS=y
+CONFIG_FOREIGN_PAGES=y
+CONFIG_PAGESIZED_SKBS=y
 CONFIG_X86=y
 # CONFIG_X86_64 is not set
 
